--- a/views/public_page.hbs
+++ b/views/public_page.hbs
@@ -470,53 +470,6 @@
 
 				<div class="col-lg-8 col-md-10 col-12 order-md-1 order-2 mx-0 p-0">
 
-					<div class="text-overlay position-absolute">
-						<p></p>
-
-						<div class="d-flex align-items-start">
-
-							<div class="offset-md-1 col-md-4 col-6 px-1">
-
-								<svg class="d-none text-banner-icon mx-auto" width="100%" viewBox="0 0 156 143" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-								    <!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
-								    <desc>Created with Sketch.</desc>
-								    <defs></defs>
-								    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linejoin="round">
-								        <g id="Mobile" transform="translate(-27.000000, -224.000000)">
-								            <g id="Text-Banner" transform="translate(28.000000, 225.000000)">
-								                <polygon id="Path-7" stroke="#FFFBFB" stroke-width="2" fill-opacity="0.58" fill="#D8D8D8" points="0.00848424617 0.0441051973 153.618071 0.0441051973 153.618071 141 0.00848424617 141"></polygon>
-								                <polygon id="Path-8" stroke="#FFFFFF" stroke-width="3" fill="#FFFFFF" points="76.8132776 12 141 12 141 32.2427856 76.8132776 32.2427856"></polygon>
-								            </g>
-								        </g>
-								    </g>
-								</svg>
-							</div>
-
-							<div class="offset-md-1 col-md-4 col-6 px-1">
-
-								<svg class="d-none text-banner-icon mx-auto" width="100%" viewBox="0 0 156 231" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-								    <!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
-								    <desc>Created with Sketch.</desc>
-								    <defs></defs>
-								    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-								        <g id="Mobile" transform="translate(-192.000000, -224.000000)">
-								            <g id="Text-Block" transform="translate(193.000000, 225.000000)">
-								                <polygon id="Path-7-Copy" stroke="#FFFBFB" stroke-width="2" fill-opacity="0.58" fill="#D8D8D8" stroke-linejoin="round" points="0 0 154 0 154 229 0 229"></polygon>
-								                <polygon id="Path-8-Copy" fill="#FFFFFF" points="0 143 154 143 154 229 0 229"></polygon>
-								                <path d="M138.5,159 L71.5,159" id="Line-2" stroke="#000000" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"></path>
-								                <path d="M138.5,186 L15.5,186" id="Line-2-Copy" stroke="#000000" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"></path>
-								                <path d="M110.5,212 L15.5,212" id="Line-2-Copy-2" stroke="#000000" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"></path>
-								            </g>
-								        </g>
-								    </g>
-								</svg>
-
-							</div>
-						</div>
-
-
-					</div>
-
 					<div class="img-block">
 
 						<div id="overlay" class="position-absolute">
@@ -551,6 +504,39 @@
 					</div>
 
 				</div>
+
+		</div>
+
+		<div class="text-overlay position-absolute offset-md-6 offset-lg-7" style="bottom:150px">
+
+			<div class="d-flex align-items-end">
+
+				<div class="col-6">
+
+					<svg class="d-none text-banner-icon mx-auto" width="100%" viewBox="0 0 156 231" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path fill-rule="evenodd" clip-rule="evenodd" d="M1 1H155V230H1V1Z" fill="#D8D8D8" fill-opacity="0.58" stroke="#FFFBFB" stroke-width="2" stroke-linejoin="round"/>
+					<path fill-rule="evenodd" clip-rule="evenodd" d="M1 144H155V230H1V144Z" fill="#FFFFFF"/>
+					<path class="banner-lines" d="M139.5 160H72.5" stroke="#DADADA" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+					<path class="banner-lines" d="M139.5 187H16.5" stroke="#DADADA" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+					<path class="banner-lines" d="M111.5 213H16.5" stroke="#DADADA" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+					<path class="banner-inBox" fill-rule="evenodd" clip-rule="evenodd" d="M10 15C10 13.3431 11.3431 12 13 12H71C72.6569 12 74 13.3431 74 15V29C74 30.6569 72.6569 32 71 32H13C11.3431 32 10 30.6569 10 29V15Z" fill="#000000"/>
+					<path class="banner-inBox" fill-rule="evenodd" clip-rule="evenodd" d="M82 15C82 13.3431 83.3431 12 85 12H143.187C144.844 12 146.187 13.3431 146.187 15V29.2428C146.187 30.8996 144.844 32.2428 143.187 32.2428H85C83.3431 32.2428 82 30.8996 82 29.2428V15Z" fill="#FFFFFF"/>
+					<path class="banner-inBox" fill-rule="evenodd" clip-rule="evenodd" d="M10 116C10 114.343 11.3431 113 13 113H71C72.6569 113 74 114.343 74 116V130C74 131.657 72.6569 133 71 133H13C11.3431 133 10 131.657 10 130V116Z" fill="#FFFFFF"/>
+					<path class="banner-inBox" fill-rule="evenodd" clip-rule="evenodd" d="M82 116C82 114.343 83.3431 113 85 113H143C144.657 113 146 114.343 146 116V130C146 131.657 144.657 133 143 133H85C83.3431 133 82 131.657 82 130V116Z" fill="#FFFFFF"/>
+					</svg>
+
+				</div>
+
+				<div class="col-6">
+
+
+
+				</div>
+			</div>
+
+
+			<p></p>
+
 
 		</div>
 
@@ -617,7 +603,7 @@
 
 				<div class="home-btn position-absolute" style="right: 21px; bottom: 21px; z-index: 13">
 
-					<svg data-name="Home." width="64px" height="64px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<svg data-name="Go Home." width="64px" height="64px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
 							<desc>Created with Sketch.</desc>
 							<defs>
@@ -674,8 +660,7 @@
 
 				</div>
 
-				<div class="text-btn position-absolute" style="right: 21px; bottom: 21px; z-index: 13">
-
+				<div class="text-btn position-absolute" style="right: 21px; bottom: 21px; z-index: 13" ctr="0">
 
 					<svg data-name="Text Position." width="64px" height="64px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
@@ -1170,8 +1155,6 @@
 
 							}
 
-							//					console.log(className());
-
 							className();
 
 					})
@@ -1236,6 +1219,20 @@
 				tl4.reverse();
 				tl5.reverse();
 			});
+
+			$('.text-btn').on('click',function() {
+				let ctr = $(this).attr('ctr');
+				console.log(ctr);
+				if (ctr == 4) {
+					$(this).attr({ctr:0});
+					$('.banner-inBox').attr('fill','white');
+					return console.log($(`.banner-lines`).attr({stroke:'black'}));
+				};
+				$(`.banner-lines`).attr('stroke','#DADADA');
+				$(`.banner-inBox:eq(${ctr})`).attr('fill','black').siblings('.banner-inBox').attr('fill','white');
+				ctr++;
+				$(this).attr({ctr});
+			})
 
 		</script>
 
