--- a/views/home.hbs
+++ b/views/home.hbs
@@ -681,13 +681,13 @@
 
                       <div id="overlay" class="position-absolute">
 
-                          <div class="detailBox bg-dark rounded">
+                          <div class="detailBox bg-dark rounded" ctr="5">
 
 
                               <small class="border-right px-1 rounded-left">1</small>
                               <small class="border-right px-1">2</small>
                               <small class="border-right px-1">3</small>
-                              <small class=" px-1 rounded-right">4</small>
+                              <small class="px-1 rounded-right">4</small>
 
 
                           </div>
@@ -2378,7 +2378,7 @@ border-top-color: #343a40;
                     right: '2%',
                     top: '2%',
                     bottom: ''
-                });
+                }).attr({ctr:1});
 
             })
 
@@ -2395,7 +2395,7 @@ border-top-color: #343a40;
                     right: '',
                     top: '2%',
                     bottom: ''
-                });
+                }).attr({ctr:0});;
 
             })
 
@@ -2412,7 +2412,7 @@ border-top-color: #343a40;
                     right: '',
                     top: '',
                     bottom: '2%'
-                });
+                }).attr({ctr:1});;
 
             })
 
@@ -2429,7 +2429,7 @@ border-top-color: #343a40;
                     right: '2%',
                     top: '',
                     bottom: '2%'
-                });
+                }).attr({ctr:1});;
 
             })
 
