counter is working finally....

--- a/views/public_page.hbs
+++ b/views/public_page.hbs
@@ -938,6 +938,7 @@
 
 				if (key == 4) {
 
+					$('.text-btn').attr({ctr:-1});
 					$('.detailBox').css({display: 'none'});
 					$('.detailBox-Big').css({display: 'block'});
 					$('.banner-inBox').attr({fill: '#DADADA'});
